@startuml Modul_C_Penyelarasan_Stok

' Pengaturan visual agar profesional dan fungsional
skinparam classAttributeIconSize 0
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam defaultFontName "Arial"
skinparam defaultFontSize 14
skinparam titleFontSize 20

title Penyelarasan Stok
    class StockMutation {
        - id: Integer
        - productId: Integer
        - variantId: Integer
        - userId: Integer
        - type: StockMutationType
        - qtyBaseUnit: Decimal
        - unitFactorAtMutation: Decimal
        - reference: String
        - createdAt: DateTime
        + recordMutation(product: Product, amount: Decimal, reason: String): void
        + getProductDetail(): Product
        + getVariantDetail(): ProductVariant
    }

    class StockOpnameWorksheet {
        - generatedAt: DateTime
        - items: List<WorksheetItem>
        + generate(products: List<Product>): String
        + processResult(variantId: Integer, physicalQty: Decimal): void
    }

    enum StockMutationType {
        PURCHASE
        PURCHASE_CANCEL
        SALE
        WASTE
        ADJUSTMENT
        RETURN_RESTOCK
        EXCHANGE
    }

    ' Relationships
    StockMutation "0..*" -- "1" Product : records change on >
    StockMutation "0..*" -- "1" ProductVariant : via variant >
    StockMutation ..> StockMutationType : using >
    StockOpnameWorksheet ..> StockMutation : triggers >
    StockMutation "0..*" -- "1" User : executed by >

    class Product <<external>> {
        - id: Integer
        - name: String
        - sku: String
        + updateStock(amount: Decimal): void
    }
    class ProductVariant <<external>> {
        - id: Integer
        - name: String
        - sku: String
    }
    class User <<external>> {
        - id: Integer
        - name: String
    }




@enduml
